config/webapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: theyseemeroling-webapp
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: theyseemeroling-webapp
